--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "mat-label",
   "license": "BSD-3-Clause",
-  "version": "0.8.4",
-  "description": "This element is used to display a material label.",
+  "version": "0.8.5",
+  "description": "A custom element used to display a Material Design label",
   "homepage": "http://www.expandjs.com/elements/mat-label",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
