--- a/bower.json
+++ b/bower.json
@@ -24,13 +24,13 @@
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs",
-    "mat-ink": "ExpandJS/mat-ink",
-    "xp-label": "ExpandJS/xp-label",
+    "expandjs": "ExpandJS/expandjs#alpha",
+    "mat-ink": "ExpandJS/mat-ink#alpha",
+    "xp-label": "ExpandJS/xp-label#alpha",
     "polymer": "Polymer/polymer#^0.5"
   },
   "devDependencies": {
-    "mat-demo": "ExpandJS/mat-demo",
-    "mat-text-field": "ExpandJS/mat-text-field"
+    "mat-demo": "ExpandJS/mat-demo#alpha",
+    "mat-text-field": "ExpandJS/mat-text-field#alpha"
   }
 }
