--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mat-label",
   "license": "BSD-3-Clause",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A custom element used to display a Material Design label",
   "homepage": "http://expandjs.com/elements/mat-label",
   "authors": [
@@ -24,13 +24,13 @@
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs",
-    "mat-ink": "ExpandJS/mat-ink",
-    "xp-label": "ExpandJS/xp-label",
-    "polymer": "Polymer/polymer"
+    "expandjs": "ExpandJS/expandjs#0.9.1",
+    "mat-ink": "ExpandJS/mat-ink#0.9.1",
+    "xp-label": "ExpandJS/xp-label#0.9.1",
+    "polymer": "Polymer/polymer#^1.0.4"
   },
   "devDependencies": {
-    "mat-demo": "ExpandJS/mat-demo",
-    "mat-text-field": "ExpandJS/mat-text-field"
+    "mat-demo": "ExpandJS/mat-demo#0.9.1",
+    "mat-text-field": "ExpandJS/mat-text-field#0.9.1"
   }
 }
