--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mat-label",
   "license": "BSD-3-Clause",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "description": "A custom element used to display a Material Design label",
   "homepage": "http://expandjs.com/elements/mat-label",
   "authors": [
@@ -24,13 +24,14 @@
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs#0.9.3",
-    "mat-ink": "ExpandJS/mat-ink#0.9.3",
-    "xp-label": "ExpandJS/xp-label#0.9.3",
+    "expandjs": "ExpandJS/expandjs#0.9.4",
+    "mat-ink": "ExpandJS/mat-ink#0.9.4",
+    "xp-adapter-behavior": "ExpandJS/xp-adapter-behavior#0.9.4",
+    "xp-label": "ExpandJS/xp-label#0.9.4",
     "polymer": "Polymer/polymer#^1.0.0"
   },
   "devDependencies": {
-    "mat-demo": "ExpandJS/mat-demo#0.9.3",
-    "mat-text-field": "ExpandJS/mat-text-field#0.9.3"
+    "mat-demo": "ExpandJS/mat-demo#0.9.4",
+    "mat-text-field": "ExpandJS/mat-text-field#0.9.4"
   }
 }
