--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mat-label",
   "license": "BSD-3-Clause",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "main": "mat-label.html",
   "description": "A custom element used to display a Material Design label",
   "homepage": "http://expandjs.com/elements/mat-label",
@@ -12,23 +12,23 @@
   ],
   "keywords": [
     "material design",
-    "material label",
-    "web app",
-    "html5",
     "expandjs",
+    "web app",
+    "custom elements",
     "web-components"
   ],
   "ignore": [
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs#0.9.11",
-    "mat-ink": "ExpandJS/mat-ink#0.9.11",
-    "xp-label": "ExpandJS/xp-label#0.9.11",
-    "polymer": "Polymer/polymer#^1.1.0"
+    "expandjs": "ExpandJS/expandjs#0.10.0",
+    "mat-ink": "ExpandJS/mat-ink#0.10.0",
+    "mat-typography": "ExpandJS/mat-typography#0.10.0",
+    "xp-label-behavior": "ExpandJS/xp-label-behavior#0.10.0",
+    "polymer": "Polymer/polymer#^1.2.0"
   },
   "devDependencies": {
-    "mat-demo": "ExpandJS/mat-demo#0.9.11",
-    "mat-text-field": "ExpandJS/mat-text-field#0.9.11"
+    "mat-demo": "ExpandJS/mat-demo#0.10.0",
+    "mat-text-field": "ExpandJS/mat-text-field#0.10.0"
   }
 }
